# ai-video-detector

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  PROJECT_STATUS.md  Procfile  QUICKSTART.md  README.md  ROADMAP.md  SETUP_TASKS.md  backfill_dataset.py  download_dataset.py  download_training_data.sh  evaluate.py  label_all.py  main.py  nixpacks.toml  requirements.txt  run.sh  train_forever.py  vercel.json  ziIgKmpf
analyzer/: __init__.py  audio_analyzer.py  audio_analyzer_ai.py  build_frame_model.py  c2pa_verifier.py  codec_analyzer.py  container_parser.py  ensemble.py  feature_extractor.py  frame_analyzer.py  frequency_analyzer.py  gemini_analyzer.py  image_analyzer.py  metadata_reader.py  motion_analyzer.py  platform_flags.py  tiktok_resolver.py  vision_analyzer.py  visual_analyzer.py  visual_detector.py
api/: billing.py  database.py  server.py  telegram_bot.py  whatsapp_bot.py
benchmark/: latest_manifest.csv  latest_report.md  latest_results.json
chrome-extension/: background.js  build.sh  manifest.json  store-listing.md
data/: daily_snapshot.json  frame_calibration.json  frame_training.json  image_training_samples.json  large_dataset.json  ml_training.json  seen_video_ids.json  training_samples.json  user_seed_images.json  user_seed_videos.json
lab/: .gitignore  invariants.mjs  logic.mjs  run.sh
mobile/: App.tsx  Onboarding.tsx  PLAY_LISTING.md  STORE_RELEASE.md  SelfCheck.tsx  app.json  billing.ts  (+7 more)
mobile-src/: App.tsx  HOW_TO_BUILD.md
sdk/python/: README.md  pyproject.toml  verifai.py
sdk/python/verifai_sdk.egg-info/: PKG-INFO  SOURCES.txt
(+108 files in other folders)
