[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verifai-sdk"
version = "0.2.0"
description = "Detect AI-generated videos (Sora, Veo, Kling, Runway...) with a single API call"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "VerifAI" }]
keywords = ["ai-detection", "deepfake", "video", "c2pa", "content-credentials"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
    "Topic :: Security",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://web-zeta-ecru-80.vercel.app"
Dashboard = "https://web-zeta-ecru-80.vercel.app/dashboard"

[tool.setuptools]
py-modules = ["verifai"]
